Login and me API updated. May 28
